  (thanks, Jeffrey Arnold)

  o hook_pdfcrop() should work better under Windows now (#209) (thanks
  @DCCKC and @r2d3)

  o tikz compilation fails on Windows network drives

  o FFmpeg does not really work for HTML/Markdown output because the
  dot in figure filenames was omitted (thanks, Ming Kuo)

  o child documents can fail when they are in different sub
  directories (thanks, Christoph J)

MAJOR CHANGES

  o .Random.seed is not cached any more because of weird problems due
  to lazy loading (#248 and #253); users should use set.seed() to make
  sure reproducibility of random simulations; the chunk output is
  cached in a .RData database instead of a lazy load database to avoid
  problems in #253
  
MINOR CHANGES

  o knitr will show a message when a chunk is empty; this helps users
  who do not actually want a chunk to be empty realize the problem
  like #229; in the past, knitr just silently returns an empty string
  from such chunks

  o knitr will show a message when the cache is loaded and the option
  opts_knit$get('verbose') is TRUE (#249) (thanks, Carl Boettiger)

  o the filename extensions Snw and Stex are also supported
  (foo.Snw/foo.Stex produces foo.tex)

  o the HTML output hooks are changed according to the suggestion of
  Barry Rowlingson (#250) and the default CSS is also slightly
  modified

  
			 CHANGES IN knitr VERSION 0.5

NEW FEATURES

  o white spaces are allowed before <<>> when using chunk references,
  and this approach of references is supported in tex and html
  documents as well

  o added a new pattern list named 'md' so that R code blocks can be
  written more naturally in extended markdown (e.g. GFM and pandoc):
  use ``` {r label, opts} to begin a chunk and ``` (three or more
  backticks) to begin normal text, and write inline R code in `r
  code.here`; it is the default syntax for markdown input, or you can
  call pat_md() before knit() so knitr can make use of this pattern
  list to process the input document
